fix : solved the error in update API
